<RelativeLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/appwidget_dark_bg"
    android:paddingBottom="4dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="4dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:maxLines="1"
        android:text="Updating..."
        android:textColor="#ffffff"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/heading_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/title"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading_ride"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_heading_ride"
            android:textColor="#ffffff"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/heading_eta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_heading_eta"
            android:textColor="#ffffff"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/heading_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_heading_cost"
            android:textColor="#ffffff"
            android:textSize="11sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/value_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_toEndOf="@id/heading_container"
        android:layout_toRightOf="@id/heading_container"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ride"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-thin"
            android:maxLines="1"
            android:text="..."
            android:textColor="#ffffff"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/eta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-thin"
            android:maxLines="1"
            android:text="..."
            android:textColor="#ffffff"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-thin"
            android:maxLines="1"
            android:text="..."
            android:textColor="#ffffff"
            android:textSize="11sp"/>
    </LinearLayout>

</RelativeLayout>
